--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  flutter_riverpod: ^2.1.3
+  flutter_hooks: ^0.18.6
+  hooks_riverpod: ^2.3.6
   http: ^0.13.5
   shared_preferences: ^2.2.0
 
