--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_hooks: ^0.18.6
   hooks_riverpod: ^2.3.6
   http: ^0.13.5
+  intl: ^0.18.1
   shared_preferences: ^2.2.0
 
 dev_dependencies:
